tests/checker/bad/return-bad1.scilla
scilla_version 0

contract ReturnBad1()

(* Procedure doesn't return *)
procedure no_return() -> BNum
  ret = _creation_block
  (* Error: no return *)
end
procedure no_return_fixed() -> BNum
  ret = _creation_block;
  return ret (* OK *)
end
